nivasa-macros/tests/trybuild/subscribe_message_empty_name.stderr
error: `#[subscribe_message]` expects a non-empty event name like `#[subscribe_message("event_name")]`
 --> tests/trybuild/subscribe_message_empty_name.rs:6:25
  |
6 |     #[subscribe_message("")]
  |                         ^^
